Token for listData entries to access owner mod element + one more fix